[issue-number] locations ve transportations icin rest controller'lar eklendi